WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281802
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-rtl-002.html
https://bugs.webkit.org/show_bug.cgi?id=281802
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycont...
alan
Reported
2024-10-18 19:52:02 PDT
ssia
Attachments
Patch
(1.88 KB, patch)
2024-10-18 19:54 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(9.89 KB, patch)
2024-10-20 16:25 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-18 19:54:45 PDT
Created
attachment 472993
[details]
Patch
alan
Comment 2
2024-10-20 16:25:49 PDT
Created
attachment 473001
[details]
[fast-cq]Patch
EWS
Comment 3
2024-10-20 18:01:52 PDT
Committed
285491@main
(12c58e779603): <
https://commits.webkit.org/285491@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473001
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-10-20 18:02:15 PDT
<
rdar://problem/138289408
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug