[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-rtl-002.html https://bugs.webkit.org/show_bug.cgi?id=281802

Reviewed by Antti Koivisto.

The flex container relative x and y content box positions should flip main/cross axes for column direction. -also fix vertical/horizontal width/height logic.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::setFlexItemsGeometry):
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.cpp:
(WebCore::Layout::FlexFormattingUtils::mainAxisGapValue):
(WebCore::Layout::FlexFormattingUtils::crossAxisGapValue):
(WebCore::Layout::FlexFormattingUtils::usedMinimumSizeInMainAxis const):
(WebCore::Layout::FlexFormattingUtils::usedMaxContentSizeInMainAxis const):
(WebCore::Layout::FlexFormattingUtils::usedSizeInCrossAxis const):

Canonical link: https://commits.webkit.org/285491@main